[gd_scene load_steps=9 format=3 uid="uid://bj16fl3dlu87n"]

[ext_resource type="Script" path="res://scenes/player/RussianRegNPC.gd" id="1_l4u1j"]
[ext_resource type="Texture2D" uid="uid://bhuv5rfa1aamb" path="res://graphics/player/RussianRegAni.png" id="2_1c01h"]
[ext_resource type="AudioStream" uid="uid://bi7hdf8bm8bjo" path="res://music/MusketFire.mp3" id="3_s4dlp"]

[sub_resource type="Animation" id="Animation_8kg2m"]
resource_name = "BayonetFront"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ogn8d"]
resource_name = "BayonetSide"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_db8cf"]
resource_name = "Fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_sn4ok"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs2gb"]
_data = {
"BayonetFront": SubResource("Animation_8kg2m"),
"BayonetSide": SubResource("Animation_ogn8d"),
"Fire": SubResource("Animation_db8cf"),
"RESET": SubResource("Animation_sn4ok")
}

[node name="RussianRegNPC" type="CharacterBody2D"]
script = ExtResource("1_l4u1j")

[node name="Timers" type="Node2D" parent="."]

[node name="FireTimer" type="Timer" parent="Timers"]
wait_time = 0.7
autostart = true

[node name="FireableTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="RussianRegAni" type="Sprite2D" parent="."]
texture = ExtResource("2_1c01h")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="RussianRegAni"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hs2gb")
}

[node name="NPCFire" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_s4dlp")
volume_db = -35.0

[connection signal="timeout" from="Timers/FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Timers/FireableTimer" to="." method="_on_fireable_timer_timeout"]
